--- a/index.html
+++ b/index.html
@@ -33,18 +33,13 @@
         </div>
         <div class="row">
             <div class="col-md-4" id="todo">
-                <ul>
-                    <li class="task">Tâche 3 <button type="button" class="close" data-dismiss="modal">&times;</button></li>
-                    <li class="task">Tâche 4 <button type="button" class="close" data-dismiss="modal">&times;</button></li>
-                    <li class="task">Tâche 5 <button type="button" class="close" data-dismiss="modal">&times;</button></li>
-                </ul>
+                <ul></ul>
             </div>
             <div class="col-md-4" id="progress">
-                <div id="timer">
-                    25:00
-                </div>
-                <button type="button" name="debut">Début</button>
-                <button type="button" name="pause">Pause</button>
+                <div id="timer"><span id="minutes">25</span>:<span id="secondes">00</span></div>
+                <ul></ul>
+                <button type="button" name="debut" id="start">Début</button>
+                <button type="button" name="pause" id="pause">Pause</button>
             </div>
             <div class="col-md-4" id="done">
                 <ul>
