finished timer's basic function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <h1>Pomodoro Kanban-desu</h1>
+        <h1>Pomodoro Kanban</h1>
         <div class="row">
             <div class="col-md-10">
                 <input type="text" placeholder="Nouvelle tâche" id="newtask">
@@ -42,6 +42,7 @@
                 <div id="timer"><span id="minutes">25</span>:<span id="secondes">00</span></div>
                 <button type="button" name="debut" id="start">Début</button>
                 <button type="button" name="pause" id="pause">Pause</button>
+                <button type="button" name="stop" id="stop">Terminer</button>
             </div>
             <div class="col-md-4" id="done">
                 <ul></ul>
