time elapsed included into finished tasks

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-md-4" id="progress">
                 <ul></ul>
-                <div id="timer"><span id="minutes">25</span>:<span id="secondes">00</span></div>
+                <div id="timer"><span id="minutes"></span>:<span id="secondes"></span></div>
                 <button type="button" name="debut" id="start">Début</button>
                 <button type="button" name="pause" id="pause">Pause</button>
                 <button type="button" name="stop" id="stop">Terminer</button>
